Bug 415232 - Kate project settings "Directory for index files" opens a file browser, not folder browser
Summary: Kate project settings "Directory for index files" opens a file browser, not f...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 19.12.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-16 04:45 UTC by nyanpasu64
Modified: 2021-01-31 12:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nyanpasu64 2019-12-16 04:45:32 UTC
SUMMARY
When I open "Configure Kate" and browse for "Directory for index files", I get a file browser instead of a folder browser.

STEPS TO REPRODUCE
1. Open menu Settings/Configure Kate...
2. Under the tree, click Application/Projects.
3. Under the Project Index group box, under "Directory for index files", click the folder icon to the right of the text field.

OBSERVED RESULT
I get a file browser with an empty name and filter list. I cannot select a directory for index files.

EXPECTED RESULT
I get a folder browser which lets me pick a directory for index files.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux 
KDE Plasma Version: 5.17.4
KDE Frameworks Version: 5.64.0
Qt Version: 5.13.2

ADDITIONAL INFORMATION
Comment 1 Christoph Feck 2020-01-09 12:21:45 UTC
Cannot reproduce, it shows the directory selector here. Are you running a non-Plasma desktop?
Comment 2 Christoph Feck 2020-01-09 12:26:27 UTC
Sorry, I was in the wrong plugin. It is about the "Projects" plugin.
Comment 3 Justin Zobel 2020-10-30 02:05:07 UTC
I've just tried to reproduce this in kate from git master.

I went into configuration, projects, and enabled Enable indexing.

When attempting to browse for a directory I also get a file chooser.

Confirmed on KDE Neon User Edition.
Comment 4 Bug Janitor Service 2021-01-31 11:14:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/217
Comment 5 Christoph Cullmann 2021-01-31 12:15:53 UTC
Git commit 0fbcee1b8bee8dbccff995220a30f1d587dc76e7 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 31/01/2021 at 12:15.
Pushed by cullmann into branch 'master'.

Show dir selection dialog for ProjectConfig->index

M  +1    -0    addons/project/kateprojectconfigpage.cpp

https://invent.kde.org/utilities/kate/commit/0fbcee1b8bee8dbccff995220a30f1d587dc76e7