Show dir selection dialog for ProjectConfig->index

BUG: 415232